Fixed logo not showing up on navBar and css not applying

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,3 @@
-/* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1920,20,1.414,2,4,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
-
 :root {
     --step--4: clamp(0.3127rem, 0.5885rem + -0.2298vw, 0.5425rem);
     --step--3: clamp(0.4421rem, 0.6928rem + -0.2089vw, 0.651rem);
@@ -48,4 +46,12 @@ body{
     gap: 10px;
     justify-content: center;
     flex-grow: 1;
+}
+
+.searchInput{
+    font-size: var(--step-1);
+}
+
+.searchSubmit{
+    padding: 5px;
 }
